--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,13 @@
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
-
+    <include src="./partials/header.html"></include>
+    <include src="./partials/products.html"></include>
+    <include src="./partials/howitsmade.html"></include>
+    <include src="./partials/gallery.html"></include>
+    <include src="./partials/feedback.html"></include>
+    <include src="./partials/cards.html"></include>
+    <include src="./partials/footer.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
