--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <include src="./partials/feedback.html"></include>
     <include src="./partials/cards.html"></include>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/copyright.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
