--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <include src="./partials/howitsmade.html"></include>
     <include src="./partials/gallery.html"></include>
     <include src="./partials/feedback.html"></include>
-    <include src="./partials/cards.html"></include>
+    <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
     <include src="./partials/copyright.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
