--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     <include src="./partials/footer.html"></include>
     <include src="./partials/copyright.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
     <script src="./index.js"></script>
     <script src="./js/menu.js"></script>
   </body>
