--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,9 @@
     <include src="./partials/footer.html"></include>
     <include src="./partials/copyright.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.x-git.min.js"></script>
     <script src="./index.js"></script>
     <script src="./js/menu.js"></script>
+    <script src="./js/menu-btn.js"></script>
   </body>
 </html>
