--- a/src/index.html
+++ b/src/index.html
@@ -57,5 +57,21 @@
         dots[slideIndex - 1].className += ' active';
       }
     </script>
+    <script>
+      const anchors = document.querySelectorAll('a[href*="#"]');
+
+      for (let anchor of anchors) {
+        anchor.addEventListener('click', function (e) {
+          e.preventDefault();
+
+          const blockID = anchor.getAttribute('href').substr(1);
+
+          document.getElementById(blockID).scrollIntoView({
+            behavior: 'smooth',
+            block: 'start',
+          });
+        });
+      }
+    </script>
   </body>
 </html>
