--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,11 @@
     <include src="./partials/footer.html"></include>
     <include src="./partials/copyright.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
-    <!-- <script src="https://code.jquery.com/jquery-3.x-git.min.js"></script>
-    <!-- <script
+    <script src="https://code.jquery.com/jquery-3.x-git.min.js"></script>
+    <script
       type="text/javascript"
       src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
-    ></script> -->
+    ></script>
 
     <script src="./index.js"></script>
     <script src="./js/menu.js"></script>
