--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,18 @@
     <meta name="description" content="IceCream!" />
     <title>IceCream</title>
     <title>Заголовок страницы</title>
+    <link rel="stylesheet" type="text/css" href="./slick/slick/slick.css" />
+    <!-- // Add the new slick-theme.css if you want the default styling -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./slick/slick/slick-theme.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+    />
   </head>
   <body class="body">
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
@@ -26,7 +38,33 @@
     <script src="./index.js"></script>
     <script src="./js/menu.js"></script>
     <script src="./js/menu-btn.js"></script>
-    <script>
+    <script
+      type="text/javascript"
+      src="//code.jquery.com/jquery-1.11.0.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="//code.jquery.com/jquery-migrate-1.2.1.min.js"
+    ></script>
+    <script type="text/javascript" src="./slick/slick/slick.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $('.feedback-list').slick({
+          dots: true,
+          infinite: true,
+          speed: 300,
+          slidesToShow: 1,
+          adaptiveHeight: true,
+          centerMode: true,
+          variableWidth: true,
+        });
+      });
+    </script>
+    <!-- <script>
       var slideIndex = 1;
       showSlides(slideIndex);
 
@@ -57,7 +95,7 @@
         slides[slideIndex - 1].style.display = 'block';
         dots[slideIndex - 1].className += ' active';
       }
-    </script>
+    </script> -->
     <script>
       const anchors = document.querySelectorAll('a[href*="#"]');
 
