--- a/src/index.html
+++ b/src/index.html
@@ -56,11 +56,20 @@
         $('.feedback-list').slick({
           dots: true,
           infinite: true,
-          speed: 300,
-          slidesToShow: 1,
+          // speed: 500,
+          // fade: true,
+          // slidesToShow: 1,
+          // centerPadding: '50px',
           adaptiveHeight: true,
-          centerMode: true,
-          variableWidth: true,
+          // cssEase: 'linear',
+          // centerMode: true,
+          // variableWidth: true,
+          slidesToShow: 1,
+          //
+          //
+          dotsClass: 'slick-dots',
+          // variableWidth: true,
+          // fade: true,
         });
       });
     </script>
