--- a/src/index.html
+++ b/src/index.html
@@ -54,22 +54,72 @@
     <script type="text/javascript">
       $(document).ready(function () {
         $('.feedback-list').slick({
-          dots: true,
-          infinite: true,
-          // speed: 500,
-          // fade: true,
+          infinite: false,
+          mobileFirst: true,
+          responsive: [
+            {
+              breakpoint: 1200,
+              settings: {
+                slidesToShow: 1,
+                infinite: true,
+                slidesToScroll: 1,
+                // autoplay: true,
+                // autoplaySpeed: 10000,
+                adaptiveHeight: true,
+                centerMode: true,
+                dots: true,
+                variableWidth: true,
+              },
+            },
+            {
+              breakpoint: 768,
+              settings: {
+                slidesToShow: 1,
+                infinite: true,
+                slidesToScroll: 1,
+                // autoplay: true,
+                // autoplaySpeed: 10000,
+                adaptiveHeight: true,
+                dots: true,
+                centerMode: true,
+                variableWidth: true,
+              },
+            },
+            {
+              breakpoint: 320,
+              settings: {
+                slidesToShow: 1,
+                infinite: true,
+                slidesToScroll: 1,
+                // autoplay: true,
+                // autoplaySpeed: 10000,
+                adaptiveHeight: true,
+                dots: true,
+              },
+            },
+            {
+              breakpoint: 300,
+              settings: {
+                settings: 'unslick',
+              },
+            },
+          ],
+          // dots: true,
+          // infinite: true,
+          // // speed: 500,
+          // // fade: true,
+          // // slidesToShow: 1,
+          // // centerPadding: '50px',
+          // adaptiveHeight: true,
+          // // cssEase: 'linear',
+          // // centerMode: true,
+          // // variableWidth: true,
           // slidesToShow: 1,
-          // centerPadding: '50px',
-          adaptiveHeight: true,
-          // cssEase: 'linear',
-          // centerMode: true,
-          // variableWidth: true,
-          slidesToShow: 1,
-          //
-          //
-          dotsClass: 'slick-dots',
-          // variableWidth: true,
-          // fade: true,
+          // //
+          // //
+          // dotsClass: 'slick-dots',
+          // // variableWidth: true,
+          // // fade: true,
         });
       });
     </script>
