--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="IceCream!" />
     <title>IceCream</title>
-    <title>Заголовок страницы</title>
     <link rel="stylesheet" type="text/css" href="./slick/slick/slick.css" />
     <!-- // Add the new slick-theme.css if you want the default styling -->
     <link
@@ -33,20 +32,11 @@
     <script src="./index.js"></script>
     <script src="./js/menu.js"></script>
     <script src="./js/menu-btn.js"></script>
-    <script
-      type="text/javascript"
-      src="//code.jquery.com/jquery-1.11.0.min.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="//code.jquery.com/jquery-migrate-1.2.1.min.js"
-    ></script>
-    <script type="text/javascript" src="./slick/slick/slick.min.js"></script>
-    <script type="text/javascript">
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="./slick/slick/slick.min.js"></script>
+    <script>
       $(document).ready(function () {
         $('.feedback-list').slick({
           infinite: false,
